Fixed seeker width jumping when playing audio
Refs https://github.com/TryGhost/Team/issues/1230

--- a/core/frontend/src/cards/css/audio.css
+++ b/core/frontend/src/cards/css/audio.css
@@ -74,6 +74,7 @@
 }
 
 .kg-audio-time {
+    width: 56px;
     color: #ababab;
     font-family: inherit;
     font-size: .85em;
